tests/golden/type_errors/array_reduce_callback_accumulator_mismatch.cd
fun bad(acc: string, value: number): number {
  return 1;
}
reduce([1], 0, bad);
