tests/golden/type_errors/array_reduce_callback_accumulator_mismatch.err
Type error at 4:19: reduce callback accumulator expects number, got string
  reduce([1], 0, bad);
                    ^
